correction .c to give more space on mobile device

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -959,7 +959,7 @@ a.underline-hover-effect {
   }
 
   .c {
-    grid-area: 7 / 2 / span 3 / span 1;
+    grid-area: 8 / 2 / span 3 / span 1;
   }
 
   .c-contain {
